2005-10-16  Kouhei Sutou  <kou@cozmixng.org>

	* NEWS: Added release 1.0.0.

2005-10-15  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: Use StringValuePtr
	instead of STR2CSTR.

	* packages/cairo/ext/rb_cairo_surface.c: Supported PS/PDF surface.
	* samples/ps.rb, samples/ps2.rb: Added PS surface sample.
	* samples/pdf.rb, samples/pdf2.rb: Added PDF surface sample.

2005-10-13  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_surface.c: Fixed a SEGV bug caused
	by Ruby's GC.
	(cr_image_surface_create_from_png_generic): Fixed a memory leak
	bug.

	* packages/cairo/ext/rb_cairo_pattern.c: Added
	Cairo::GradientPattern#add_color_stop_rgb and
	Cairo::GradientPattern#add_color_stop for convenience.

2005-10-12  Kouhei Sutou  <kou@cozmixng.org>

	* samples/png.rb: Use Cairo::Context#set_source_rgb instead of
	Cairo::Context#set_source.

	* packages/cairo/ext/rb_cairo_context.c (cr_set_source_rgb):
	Re-implemented for backward compatibility.

	* samples/png.rb: Use Cairo::Context#set_source_rgba instead of
	Cairo::Context#set_source.

	* packages/cairo/ext/rb_cairo_surface.c
	(cr_image_surface_create_from_png_generic): Set class of the
	surface.

	* packages/cairo/ext/rb_cairo_context.c (cr_set_source_generic):
	Fixed wrong variable name.

2005-10-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo_context.c: Provided
	Cairo::Context#set_soruce_rgba.
	(cr_arc_negative, cr_arc): cx -> xc and cy -> yc.

	* packages/cairo/ext: Extracted Ruby object -> enum type codes.

	* packages/cairo/ext/rb_cairo_pattern.c
	(cr_gradient_pattern_add_color_stop_rgba): Renamed from
	cr_gradient_pattern_add_color_stop.

2005-10-10  Øyvind Kolås  <pippin@gimp.org>

	* packages/cairo/ext/rb_cairo_pattern.c:
	(cr_gradient_pattern_add_color_stop): Make the code work when not
	passing the color as an array as well.

2005-10-11  Kouhei Sutou  <kou@cozmixng.org>

	* packages/cairo/ext/rb_cairo.c: Added cairo version info.
